--- a/Vampa/src/main/webapp/resources/css/footer.css
+++ b/Vampa/src/main/webapp/resources/css/footer.css
@@ -4,6 +4,7 @@
 .footer_nav{
     width:100%;
     height:50px;
+    margin-top:100px;
     border-bottom : 1px solid black;
  }
 .footer_nav_container{
