--- a/Vampa/src/main/webapp/resources/css/admin/adminCmn.css
+++ b/Vampa/src/main/webapp/resources/css/admin/adminCmn.css
@@ -1,5 +1,8 @@
 @charset "UTF-8";
-
+	
+	input {
+		border:none;
+	}
 
 	*{
     margin: 0;
@@ -104,65 +107,63 @@
 	}
 	  
 	  
-	
-	/* footer navi 영역 */
-	.footer_nav{
-	    width:100%;
-	    height:50px;
-	    margin-top:100px;
-	    border-bottom : 1px solid black;
-	 }
-	.footer_nav_container{
-	    width: 100%;
-	    height: 100%;
-	    padding-top:10px;
+		 	/* 검색 영역 */
+	.search_wrap{
+		margin-top:50px;
 	}
-	.footer_nav_container>ul{
-		display:flex;
-		justify-content : center;
-		font-size: 14px;
-	    list-style:none;
-	    font-family: dotum;
+	.search_input{
+	    position: relative;
+	    text-align:center;	
 	}
-	
-	.footer_nav_container>ul>li{
-	    padding:10px;
-	    cursor: pointer;
+	.search_input input[name='keyword']{
+		padding: 5px 10px;
+	    font-size: 15px;
+	    height: 20px;
+	    line-height: 20px;
+	    border-bottom:1px solid #404040;
 	}
-	
-	.footer_nav_container>ul>span{
-	    margin: 0 4px;
-	    padding:10px;
-	}
-	
-	/* footer 영역 */
-	.footer{
-	    width:100%;
-	    height:180px;
-	    padding:40px 30px;
+	.search_btn{
+	    position: absolute;
+	    margin-left: 15px;
+		height: 25px;
+	    width: 60px;
 	    font-size: 14px;
+	    line-height: 20px;
+	    color:white;
+	    background-color: #404040;
+	    border:none;
 	}
-	.footer_container{
-		display: flex;
-		justify-content : center;
-		align-item: center;
-	    width: 100%;
-	    height: 100%;
+	
+		/* 페이지 버튼 인터페이스 */
+	.pageMaker_wrap{
+		text-align: center;
+	    margin-top: 30px;
+	    margin-bottom: 40px;
 	}
-	.footer_left{
-		float:left;
-	    width: 120px;
-	    margin-top:-5px;
-	    margin-right: 40px;
+	.pageMaker{
+	    list-style: none;
+	    display: inline-block;
+	}	
+	.pageMaker_btn {
+	    float: left;
+	    width: 40px;
+	    height: 40px;
+	    line-height: 40px;
+	    margin-left: 20px;
 	}
-	.footer_left>img {
-	    width: 100%;
+	.active{
+		border : 2px solid black;
+		font-weight:400;
 	}
-	.footer_right{
-		float:left;
-		line-height:20px;
-	}    
+	.next, .prev {
+	    border: 1px solid #ccc;
+	    padding: 0 10px;
+	}
+	.next a, .prev a {
+	    color: #ccc;
+	}
 	 
+	  
 	 
 	/* float 속성 해제 */
 	.clearfix{
