--- a/Vampa/src/main/webapp/resources/css/goodsDetail.css
+++ b/Vampa/src/main/webapp/resources/css/goodsDetail.css
@@ -1,140 +1,276 @@
 @charset "UTF-8";
 
-	button, a {
-		cursor : pointer;
-	}
-	.content_top{
-	    width: 100%;
-	    height: 400px;  	
-	}
-	.content_top:after {
-	    content: "";
-	    clear: both;
-	    display: table;
-	}    	
-  	.ct_left_area{
-		float: left;
-	    width: 30%;
-	    height: 100%;
-  	}
-	.image_wrap{
-	   height: 80%;
-	   width: 80%;
-	   margin: auto;
-	   top: 10%;
-	   position: relative;  		
-	}
-	.image_wrap img{
-	   max-width: 100%;
-	   height: auto;
-	   display: block;  		
-	}
-	.detail.line{
-	   width: 100%;
-	   margin:50px 0;
-	   border-top:1px solid #c6c6cf;  		
-	}
-	
-	
+button, a {
+	cursor: pointer;
+	border: none;
+}
 
-  	.ct_right_area{
-	    float: left;
-	    width: 70%;
-	    height: 100%;
-  	}
-	.title{
-	    height: 28%;
-	    font-size: 17px;
-	    color: #404040;
-	    padding : 35px 0 0 3%;
-	}
-	.author{
-	    font-size: 16px;
-	    margin-bottom:10px;
-	    padding-left: 3%;  		
-	}
-	.price{
-	    line-height: 30px;
-	    padding: 2% 0 2% 3%;  		
-	}
-	.discount_price_number{
-	    line-height: 30px;
-	    font-size: 22px;
-	    color: #f84450;
-	    font-weight: bold;  			
-	}
-	.button{
-		padding: 2% 0 2% 3%;
-	}
-	.button_quantity{
-		margin-bottom: 2%;
-	}
-	.button_quantity span {
-		margin-left: 10px;
-	}
-	.button_quantity input{
-	   height: 26px;
-	   width: 40px;
-	   text-align: center;
-	   font-weight: bold;  			
-	}
-  	.button_quantity button{
-	   border: 1px solid #aaa;
-	   color: #404040;
-	   width: 15px;
-	   height: 15px;
-	   background-color: #fff;
-	   font-weight: bold;
-	   font-size: 15px;
-	   line-height: 15px;	
-	   border:none;  	  	
-  	}
-  	
-  	.button_set {
-  		margin-top: 50px;
-  	}
-  	
-	.btn_cart{
-		display: inline-block;
-		width: 140px;
-		text-align: center;
-		height: 50px;
-		line-height: 50px;
-		background-color:white;
-		border: 1px solid #404040;
-		color: #404040;		
-		margin-right: 2px;  	  
-	}
-	.btn_buy{
-		display: inline-block;
-		width: 140px;
-	    text-align: center;
-	    height: 50px;
-		line-height: 50px;
-		background-color: #404040;
-		border: 1px solid #404040;
-		color: #fff;		
-	}
-  	
-  	.content_middle{
-		width: 100%;
-	    min-height: 600px;  	
-  	}
+.content_top {
+	width: 100%;
+	padding-top: 50px;
+}
 
-	.book_intro{
-		width: 80%;
-		margin: auto;
-		margin-top: 40px;
-	}
-	.book_content{
-		width: 80%;
-		margin: auto;
-		margin-top: 40px;
-		margin-bottom: 40px;
-	}
- 	
-  	.content_bottom{
-		width: 100%;
-		min-height: 400px;
-	    background-color: #e7dbdb;  	
-  	}
+.content_top:after {
+	content: "";
+	clear: both;
+	display: table;
+}
+
+.ct_left_area {
+	float: left;
+	width: 30%;
+	height: 100%;
+}
+
+.image_wrap {
+	height: 80%;
+	width: 80%;
+	margin: auto;
+	top: 10%;
+	position: relative;
+}
+
+.image_wrap img {
+	max-width: 100%;
+	height: auto;
+	display: block;
+}
+
+.ct_right_area {
+	float: left;
+	width: 60%;
+	height: 100%;
+	padding-left: 50px;
+}
+
+.title {
+	font-size: 17px;
+	color: #404040;
+	padding: 20px 0 35px;
+}
+
+.author {
+	font-size: 16px;
+	margin-bottom: 10px;
+}
+
+.price {
+	line-height: 30px;
+}
+
+.discount_price_number {
+	line-height: 30px;
+	font-size: 22px;
+	color: #f84450;
+	font-weight: bold;
+}
+
+.button_quantity {
+	margin-bottom: 2%;
+}
+
+.button_quantity span {
+	margin-left: 10px;
+}
+
+.button_quantity input {
+	height: 26px;
+	width: 40px;
+	text-align: center;
+	font-weight: bold;
+}
+
+.button_quantity button {
+	border: 1px solid #aaa;
+	color: #404040;
+	width: 15px;
+	height: 15px;
+	background-color: #fff;
+	font-weight: bold;
+	font-size: 15px;
+	line-height: 15px;
+	border: none;
+}
+
+.button_set {
+	margin: 50px 0;
+}
+
+.btn_cart {
+	display: inline-block;
+	width: 140px;
+	text-align: center;
+	height: 50px;
+	line-height: 50px;
+	background-color: white;
+	border: 1px solid #404040;
+	color: #404040;
+	margin-right: 2px;
+}
+
+.btn_buy {
+	display: inline-block;
+	width: 140px;
+	text-align: center;
+	height: 50px;
+	line-height: 50px;
+	background-color: #404040;
+	border: 1px solid #404040;
+	color: #fff;
+}
+
+.content_middle {
+	width: 100%;
+	padding: 30px 0;
+	border-top: 1px solid #c0c0c0;
+}
+
+.book_intro {
+	width: 80%;
+	margin: auto;
+	margin-top: 40px;
+}
+
+.book_content {
+	width: 80%;
+	margin: auto;
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.content_bottom {
+	width: 100%;
+	min-height: 400px;
+	padding: 30px 0;
+	border-top: 1px solid #c0c0c0;
+}
+
+/* 리뷰 영역 */
+.reply_content_ul {
+	list-style: none;
+}
+
+.comment_wrap {
+	position: relative;
+	border-bottom: 1px dotted #d4d4d4;
+	padding: 14px 0 10px 0;
+	font-size: 12px;
+}
+/* 리뷰 머리 부분 */
+.reply_top {
+	padding-bottom: 10px;
+}
+
+.id_span {
+	padding: 0 15px 0 3px;
+	font-weight: bold;
+}
+
+.date_span {
+	padding: 0 15px 0;
+}
+/* 리뷰 컨텐트 부분 */
+.reply_bottom {
+	padding-bottom: 10px;
+}
+
+/* 리뷰 선 */
+.reply_subject {
+	width: 80%;
+	margin: 0 auto;
+}
+/* 리뷰 제목 */
+.reply_subject h3 {
+	float:left;
+}
+
+/* 리뷰쓰기 버튼 */
+.reply_button_wrap {
+	float:right;
+	margin-left: 30px;
+	padding: 5px;
+}
+
+.reply_button_wrap button {
+	background-color: #365fdd;
+	padding: 5px 12px;
+	color: white;
+	font-size: 13px;
+	border-radius:10px;	
+	cursor: pointer;
+}
+
+.reply_button_wrap button:hover {
+	background-color: #1347e7;
+}
+
+/* pageMaker */
+.repy_pageInfo_div {
+	text-align: center;
+	margin-top: 30px;
+	margin-bottom: 40px;
+}
+
+.pageMaker {
+	list-style: none;
+	display: inline-block;
+}
+
+.pageMaker_btn {
+	float: left;
+	width: 25px;
+	height: 25px;
+	line-height: 25px;
+	margin-left: 20px;
+	font-size: 10px;
+	cursor: pointer;
+}
+
+.active {
+	border: 2px solid black;
+	font-weight: 400;
+}
+
+.next, .prev {
+	border: 1px solid #ccc;
+	padding: 0 10px;
+}
+
+/* 리뷰 없는 경우 div */
+.reply_not_div {
+	text-align: center;
+}
+
+.reply_not_div span {
+	display: block;
+	margin-top: 30px;
+	margin-bottom: 20px;
+}
+
+/* 리뷰 수정 삭제 버튼 */
+.update_reply_btn {
+	font-weight: bold;
+	background-color: #b7b399;
+	display: inline-block;
+	width: 40px;
+	text-align: center;
+	height: 20px;
+	line-height: 20px;
+	margin: 0 5px 0 30px;
+	border-radius: 6px;
+	color: white;
+	cursor: pointer;
+}
+
+.delete_reply_btn {
+	font-weight: bold;
+	background-color: #e7578f;
+	display: inline-block;
+	width: 40px;
+	text-align: center;
+	height: 20px;
+	line-height: 20px;
+	border-radius: 6px;
+	color: white;
+	cursor: pointer;
+}
