--- a/Vampa/src/main/webapp/resources/css/member/join.css
+++ b/Vampa/src/main/webapp/resources/css/member/join.css
@@ -11,20 +11,19 @@
 
 /* content 랩 */
 .wrap{
-	width : 800px;
+	width : 500px;
 	margin: auto;
 }
 /* 페이지 제목 */
 .subjecet{
 	width: 100%;
-    height: 120px;
-    background-color: #8EC0E4;
+	height:30px;
+	margin-top:80px;
 }
 .subjecet span{
-	margin-left: 31px;
-    font-size: 80px;
+    font-size: 20px;
     font-weight: 900;
-    color: white;
+    color: #404040;
 }
 
 /* 아이디 영역 */
@@ -32,109 +31,90 @@
 	width: 100%;
     margin-top: 20px;
 }
-.id_name{
-	font-size: 25px;
+.name{
+	padding:5px 0;
+	font-size: 16px;
     font-weight: bold;
 }
-.id_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
+.input_box{
+	border: 1px solid #C0C0C0;
+	height:20px;
+	padding: 5px;	
 	
 }
 .id_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
 /* 중복 아이디가 존재하지 않는 경우 */
 .id_input_re_1 {
 	color: green;
 	display: none;
+	font-size:13px;
 }
 
 /* 중복 아이디가 존재하는 경우 */
 .id_input_re_2 {
 	color: red;
 	display: none;
+	font-size:13px;
 }
 
 /* 비밀번호 영역 */
 .pw_wrap{
 	width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
-.pw_name{
-	font-size: 25px;
-    font-weight: bold;
-}
-.pw_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
+
 .pw_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
 /* 비밀번호 확인 영역 */
 .pwck_wrap{
 	width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
-.pwck_name{
-	font-size: 25px;
-    font-weight: bold;
-}
-.pwck_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
+
 .pwck_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
 .pwck_input_re_1 {
 	color: green;
 	display : none;
+	font-size:13px;
 }
 
 .pwck_input_re_2 {
 	color: red;
 	display : none;
+	font-size:13px;
 }
 
 /* 이름 영역 */
 .user_wrap{
 	width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
-.user_name{
-	font-size: 25px;
-    font-weight: bold;
-}
-.user_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
+
 .user_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
 /* 메일 영역 */
@@ -142,51 +122,49 @@
 	width: 100%;
     margin-top: 20px;
 }
-.mail_name{
-	font-size: 25px;
-    font-weight: bold;
-}
-.mail_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
+
 .mail_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 .mail_check_wrap{
-	margin-top: 20px;	
-}
-.mail_check_input_box{
-	border: 1px solid black;
-    height: 31px;
-    padding: 10px 14px;
-    width: 61%;
-    float: left;
-}
-.mail_check_input{
 	width:100%;
-	height:100%;
-	border:none;
-	font-size:28px;
+	margin-top: 10px;	
 }
+
+.mail_check_wrap .input_box {
+	float:left;
+	width:60%;
+}
+
+
 .mail_check_button{
-    border: 1px solid black;
-    height: 51px;
+	float: right;
     width: 30%;
-    float: right;
-    line-height: 50px;
+    height: 20px;
+    padding: 6px;
+    line-height: 20px;
     text-align: center;
-    font-size: 30px;
-    font-weight: 900;
-    background-color: #ececf7;
+    font-size: 15px;
+    background-color: #C0C0C0;
+    color: #404040;
     cursor: pointer;
 }
 
+.mail_check_input {
+	width:100%;
+	height:100%;
+	background:none;
+	border:none;
+	padding:4px;
+}
+
+.mail_input_box_warn {
+	font-size:13px;
+}
 #mail_check_input_box_false {
 	background-color:#ebebe4;
 }
@@ -206,81 +184,72 @@
 /* 주소 영역 */
 .address_wrap{
 	width: 100%;
-    margin-top: 20px;
+    margin-top: 10px;
 }
-.address_name{
-	font-size: 25px;
-    font-weight: bold;
+
+.address_input_wrap {
+	width: 100%;
+	height:150px;	
 }
-.address_input_1_box{
-	border: 1px solid black;
-    height: 31px;
-    padding: 10px 14px;
-    width: 61%;
-    float: left;	
-}
-.address_input_1{
+
+.address_input_box{
 	width:100%;
-	height:100%;
+    height: 30px;
+    margin-bottom:10px;
+	border: 1px solid #C0C0C0;
+}
+
+.address_input_box.one {
 	border:none;
-	font-size:28px;	
+}
+
+.address_input_1{
+	width:70%;
+	height:100%;
+	font-size:16px;
+	border: 1px solid #C0C0C0;
 }
 .address_button{
-    border: 1px solid black;
-    height: 51px;
-    width: 30%;
     float: right;
-    line-height: 50px;
+    width: 22%;
+    height: 20px;
+    padding: 6px;
+    line-height: 20px;
     text-align: center;
-    font-size: 30px;
-    font-weight: 900;
-    background-color: #ececf7;
-    cursor: pointer;	
+    font-size: 15px;
+    background-color: #C0C0C0;
+    color: #404040;
+    cursor: pointer;
 }
-.address_input_2_wrap{
-	margin-top: 20px;
-}
-.address_input_2_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
 .address_input_2{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
-.address_input_3_wrap{
-	margin-top: 20px;
-}
-.address_input_3_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	
-}
+
 .address_input_3{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:16px;
 }
 
 /* 가입하기 버튼 */
 .join_button_wrap{
-	margin-top: 40px;
 	text-align: center;
 }
 .join_button{
 	width: 100%;
-    height: 80px;
-    background-color: #6AAFE6;
-    font-size: 40px;
+    height: 50px;
+    background-color: #404040;
+    line-height:50px;
+    font-size: 20px;
     font-weight: 900;
     color: white;
+    user-select : none;
 }
 
 /* float 속성 해제 */
@@ -288,7 +257,13 @@
 	clear: both;
 }
 
-
+#mail_check_input_box_warn {
+	font-size:14px;
+}
 
 /* 유효성 검사 문구 */
-.final { display: none; }
+.final { 
+	display: none; 
+	padding:5px 0;
+	font-size:12px;
+}
