--- a/Vampa/src/main/webapp/resources/css/member/login.css
+++ b/Vampa/src/main/webapp/resources/css/member/login.css
@@ -6,7 +6,10 @@
 
 /* 화면 전체 렙 */
 .wrapper{
+	position:absolute;
+	top:50%;
 	width: 100%;	
+	transform : translateY(-60%);
 }
 
 /* content 랩 */
@@ -17,64 +20,75 @@
 
 /* 페이지 로고 */
 .logo_wrap{
-	text-align: center;	
-	margin: 150px 0;	
+	display:flex;
+	justify-content: center;
+	width:100%;
+	margin-bottom: 30px;	
 }
-.logo_wrap>span{
-	font-size : 50px;
-	font-weight: 900;
+
+.logo_wrap img{
+	display:block;
+	width:200px;
 }
 
 
 /* 로그인 area */
-.id_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
+.input_box{
 	display: block;
-	width : 80%;
 	margin : auto;	
+	width :40%;
+	height:20px;
+	padding: 5px 10px;
+	border: 1px solid #C0C0C0;
 }
 .id_input{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:13px;
 }
-
 
 .pw_wrap{
-	margin-top: 40px;
+	margin-top:10px;
 }
-.pw_input_box{
-	border: 1px solid black;
-	height:31px;
-	padding: 10px 14px;	
-	display: block;
-	width : 80%;
-	margin : auto;	
-}
+
 .pw_iput{
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:28px;
+	font-size:13px;
 }
 
 
 .login_button_wrap{
-	margin-top: 40px;
+	display:flex;
+	justify-content:space-between;
+	width:44%;
+	height:100px;
+	margin: 20px auto 0;
 	text-align: center;
 }
-.login_button{
-	width: 84%;
-    height: 80px;
-    background-color: #6AAFE6;
-    font-size: 40px;
-    font-weight: 900;
+
+.login_button_wrap > div{
+	float:left;
+	width:48%;
+    height: 30px;
+    margin : 0 auto;
+    background-color: #404040;
+    font-size: 15px;
+    line-height:30px;
     color: white;
-    margin : auto;
 }
+
+.login_button_wrap > div:last-child {
+	background-color: #C0C0C0;
+}
+
+.login_button_wrap > div:last-child a{
+	color:#404040;
+	text-decoration:none;
+}
+
 
 
 .login_warn{
