--- a/Vampa/src/main/webapp/resources/css/goodsDetail.css
+++ b/Vampa/src/main/webapp/resources/css/goodsDetail.css
@@ -146,19 +146,20 @@ button, a {
 }
 
 /* 리뷰 영역 */
-.reply_content_ul {
+.reply_content > ul {
+	width: 80%;
+	margin:0 auto;
 	list-style: none;
 }
 
 .comment_wrap {
-	position: relative;
 	border-bottom: 1px dotted #d4d4d4;
 	padding: 14px 0 10px 0;
 	font-size: 12px;
 }
 /* 리뷰 머리 부분 */
 .reply_top {
-	padding-bottom: 10px;
+	font-size:14px;
 }
 
 .id_span {
@@ -171,13 +172,14 @@ button, a {
 }
 /* 리뷰 컨텐트 부분 */
 .reply_bottom {
-	padding-bottom: 10px;
+	padding: 10px 0;
+	font-size:14px;
 }
 
 /* 리뷰 선 */
 .reply_subject {
 	width: 80%;
-	margin: 0 auto;
+	margin: 0 auto 50px;
 }
 /* 리뷰 제목 */
 .reply_subject h3 {
@@ -205,10 +207,9 @@ button, a {
 }
 
 /* pageMaker */
-.repy_pageInfo_div {
+.reply_pageInfo_div {
 	text-align: center;
-	margin-top: 30px;
-	margin-bottom: 40px;
+	margin: 30px 0 ;
 }
 
 .pageMaker {
@@ -222,7 +223,7 @@ button, a {
 	height: 25px;
 	line-height: 25px;
 	margin-left: 20px;
-	font-size: 10px;
+	font-size: 15px;
 	cursor: pointer;
 }
 
@@ -238,6 +239,8 @@ button, a {
 
 /* 리뷰 없는 경우 div */
 .reply_not_div {
+	display:none;
+	padding:30px 0;
 	text-align: center;
 }
 
@@ -247,17 +250,25 @@ button, a {
 	margin-bottom: 20px;
 }
 
+.rating_value_span {
+	font-size: 15px;
+	font-family: "Font Awesome 5 Free";
+	font-weight: 600;  
+ 	color:#FFBC00;
+}
+
 /* 리뷰 수정 삭제 버튼 */
 .update_reply_btn {
 	font-weight: bold;
 	background-color: #b7b399;
 	display: inline-block;
 	width: 40px;
-	text-align: center;
 	height: 20px;
-	line-height: 20px;
 	margin: 0 5px 0 30px;
+	text-align: center;
+	line-height: 20px;
 	border-radius: 6px;
+	font-size:12px;
 	color: white;
 	cursor: pointer;
 }
@@ -267,10 +278,11 @@ button, a {
 	background-color: #e7578f;
 	display: inline-block;
 	width: 40px;
-	text-align: center;
 	height: 20px;
+	text-align: center;
 	line-height: 20px;
 	border-radius: 6px;
+	font-size:12px;
 	color: white;
 	cursor: pointer;
 }
