main - edit category, add main content

--- a/Vampa/src/main/webapp/resources/css/main.css
+++ b/Vampa/src/main/webapp/resources/css/main.css
@@ -69,7 +69,41 @@ button {
 }
 
 
-#carouselCon {
+.slide_div img{
+	margin: auto;
+}
+.slide_div_wrap{
+	position:relative;
+}
+.image_wrap img{
+	max-width: 85%;
+    height: auto;
+    display: block;
+	margin: auto;    
+}
+.main_prev {
+	position:absolute;
+	top:47%;
+	left: 30px;
+	font-size:40px;
+	background:none;
+	color:#c0c0c0;
+}
+.main_next {
+	position:absolute;
+	top:47%;
+	right: 30px;
+	font-size:40px;
+	background:none;
+	color:#c0c0c0;
+}
+
+.slick-dots li button:before {
+	font-size:4px;
+	line-height:35px;
+}
+
+/* #carouselCon {
 	position:relative;
 	width:100%;
 }
@@ -91,22 +125,90 @@ button {
 	width:100%;
 }
 
-.main_prev {
-	position:absolute;
-	top:47%;
-	left: 30px;
-	font-size:40px;
-	background:none;
-	color:#c0c0c0;
+
+} */
+
+.ls_wrap{
+    margin-top:50px;
+    padding: 0 10px;
 }
-.main_next {
-	position:absolute;
-	top:47%;
-	right: 30px;
-	font-size:40px;
-	background:none;
-	color:#c0c0c0;
+
+.ls_div {
+	padding:0 40px;
 }
+.ls_div_content_wrap {
+	padding:0 10px;
+}
+.ls_div_content{
+	margin:0 auto;
+	width: 95%;
+    height: 275px;
+    background:white;	
+    border: 1px solid #dadada;
+}
+.image_wrap{
+	width: 80%;
+    height: 60%;
+    margin: auto;
+    padding: 5% 0 5% 0;
+    display: flex;
+    align-items: center;    
+}
+.image_wrap img{
+	width:100%;
+}
+.ls_category{
+	text-align: center;
+    font-size: 13px;
+    color: #3e74ab;
+}
+.ls_rating{
+	padding:10px 0;
+	text-align: center;
+    font-size: 13px;
+    color: #e15b6e;
+}
+.ls_bookName{
+	text-align: center;
+    color: #333;
+    font-size: 15px;
+    font-weight: bold;
+}
+.ls_div_subject{
+	text-align:center;
+	font-weight: bold;
+	font-size: 18px;
+	padding: 30px 0;
+}
+
+
+.ls_div_content_prev{
+    position: absolute;
+    top: 45%;
+    width: 40px;
+    height: 30px;
+    left: 0;
+    font-weight: bold;
+    z-index: 1;
+    opacity: 35%;
+}
+.ls_div_content_prev:hover{
+   opacity: 80%;
+}
+.ls_div_content_next{
+    position: absolute;
+    top: 45%;
+    width: 40px;
+    height: 30px;
+    right: 0;
+    font-weight: bold;
+    z-index: 1;
+    opacity: 35%;
+}
+.ls_div_content_next:hover{
+   opacity: 80%;
+}
+
 
 /* float 속성 해제 */
 .clearfix{
