--- a/Vampa/src/main/webapp/resources/css/member/login.css
+++ b/Vampa/src/main/webapp/resources/css/member/login.css
@@ -36,27 +36,21 @@
 .input_box{
 	display: block;
 	margin : auto;	
-	width :40%;
-	height:20px;
 	padding: 5px 10px;
+	width :40%;
+	height:25px;
 	border: 1px solid #C0C0C0;
 }
-.id_input{
+
+.input_box input {
 	width:100%;
 	height:100%;
 	border:none;
-	font-size:14px;
+	font-size : 14px;
 }
 
 .pw_wrap{
 	margin-top:10px;
-}
-
-.pw_iput{
-	width:100%;
-	height:100%;
-	border:none;
-	font-size:14px;
 }
 
 
@@ -67,6 +61,7 @@
 	height:100px;
 	margin: 20px auto 0;
 	text-align: center;
+	cursor : pointer;
 }
 
 .login_button_wrap > div{
